solutions/exercise-8/catDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: cat-0-webapp
  name: cat-0-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat-0-webapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cat-0-webapp
    spec:
      containers:
      - image: nilli9990/cat-webapp
        name: cat-webapp
        ports:
        - containerPort: 5000
        resources: {}
status: {}
