solutions/exercise-8/cat1Service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cat-1-svc
  name: cat-1-svc
spec:
  ports:
  - name: 80-5000
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: cat-1-webapp
  type: ClusterIP
status:
  loadBalancer: {}
