solutions/exercise-8/catService.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cat-0-svc
  name: cat-0-svc
spec:
  ports:
  - name: 80-5000
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: cat-0-webapp
  type: ClusterIP
status:
  loadBalancer: {}
